# ono-sendai

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
crates/deck-core/: Cargo.toml
crates/deck-core/src/: config.rs  error.rs  lib.rs  message.rs  traits.rs
crates/deck-llm/: Cargo.toml
crates/deck-llm/src/: lib.rs  mock.rs  ollama.rs
crates/deck-mcp/: Cargo.toml
crates/deck-mcp/src/: lib.rs  stdio.rs  wire.rs
crates/deck-orchestrator/: Cargo.toml
crates/deck-orchestrator/src/: lib.rs
crates/deck-plugin/: Cargo.toml
crates/deck-plugin/src/: lib.rs
crates/deck-sandbox/: Cargo.toml
crates/deck-sandbox/src/: lib.rs  linux.rs  profile.rs  stub.rs
crates/deck-store/: Cargo.toml
crates/deck-store/src/: lib.rs  sqlite.rs
crates/deck-tui/: Cargo.toml
crates/deck-tui/src/: app.rs  event.rs  lib.rs  ui.rs
docs/: ARCHITECTURE.md  ROADMAP.md
plugins/icebreaker/: Cargo.toml
plugins/icebreaker/src/: lib.rs
plugins/mesh/: Cargo.toml
plugins/mesh/src/: lib.rs
scripts/: release.sh
src/: main.rs
