[package]
name = "deck-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain types, traits, and config for ono-sendai"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
dirs = { workspace = true }
figment = { workspace = true }

[dev-dependencies]
toml = "0.8"
