[package]
name = "deck-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM plugin host trait + manifest types (ono-sendai). Loader is wired in 0.2."

[lints]
workspace = true

[dependencies]
deck-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
toml = "0.8"
