[package]
name = "deck-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Encrypted (age) SQLite session store for ono-sendai"

[lints]
workspace = true

[dependencies]
deck-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
age = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
